# dasl

./: .gitmodules  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yaml  tests.yaml
pr/1/docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
pr/1/docs/dasl/: all.html  index.html  sidebar-items.js
pr/1/docs/dasl/cid/: enum.CidParseError.html  enum.Codec.html  enum.Multihash.html  enum.MultihashParseError.html  enum.ParseCodecError.html  index.html  sidebar-items.js  struct.Cid.html
pr/1/docs/dasl/drisl/: enum.DecodeError.html  enum.EncodeError.html  enum.Value.html  fn.from_reader.html  fn.from_slice.html  fn.to_vec.html  fn.to_writer.html  index.html  sidebar-items.js
pr/1/docs/dasl/drisl/de/: fn.from_reader.html  fn.from_reader_once.html  fn.from_slice.html  fn.is_indefinite.html  fn.iter_from_reader.html  index.html  sidebar-items.js  struct.Deserializer.html  struct.StreamDeserializer.html
pr/1/docs/dasl/drisl/error/: enum.CodecError.html  enum.DecodeError.html  enum.EncodeError.html  enum.Len.html  index.html  sidebar-items.js
pr/1/docs/dasl/drisl/ser/: fn.to_vec.html  fn.to_writer.html  index.html  sidebar-items.js  struct.BoundedCollect.html  struct.BufWriter.html  (+4 more)
pr/1/docs/search.desc/dasl/: dasl-desc-0-.js
pr/1/docs/src/dasl/: base32.rs.html  cid.rs.html  drisl.rs.html  lib.rs.html
src/: base32.rs  cid.rs  drisl.rs  lib.rs  main.rs
src/cid/: serde.rs
src/drisl/: cbor4ii_nonpub.rs  de.rs  error.rs  ser.rs  value.rs
tests/: cid.rs  de.rs  enum.rs  integration.rs  ser.rs  std_types.rs  value.rs
(+40 files in other folders)
