[package]
name = "dasl"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Data-Adressed Structures & Links"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = "https://github.com/n0-computer/dasl"
license = "MIT OR Apache-2.0"

[dependencies]
blake3 = "1.8.2"
cbor4ii = { version = "1.0.0", features = ["use_alloc", "use_std"] }
data-encoding = "2.9.0"
data-encoding-macro = "0.1.18"
scopeguard = "1.2.0"
serde = "1.0.219"
serde_bytes = "0.11.17"
sha2 = "0.10.9"
thiserror = "2.0.12"
